<?xml version="1.0"?>
<package format="3">
  <name>fastslam_core</name>
  <version>0.1.0</version>
  <description>Core FastSLAM logic</description>
  <maintainer email="azul@todo.todo">azul</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>eigen3</depend>
  <depend>sophus</depend>
  <test_depend>ament_cmake_gtest</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
